Fix problem with overflow-x

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,16 +1,18 @@
 .newsContainer {
-  display: block;
+  box-sizing: border-box;
   position: relative;
-  height: 200px;
+  width: 100vw;
+  max-height: 350px;
   margin-top: 100px;
   background-color: blue;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .newsWrap {
-  width: calc(100% - 500px);
+  width: calc(100vw - 30%);
   height: 100%;
   background-color: red;
   display: flex;
@@ -51,7 +53,7 @@
   margin: 0;
   padding: 0;
   min-height: 100%;
-  width: 100%;
+  width: 100vw;
   background: rgba(240, 248, 255, 0.5);
   display: flex;
   align-items: center;
