--- a/src/components/NewsList/NewsList.module.css
+++ b/src/components/NewsList/NewsList.module.css
@@ -6,6 +6,8 @@
 .newsCard {
   width: 166px;
   height: 166px;
+  max-width: 166px;
+  max-height: 166px;
   border-radius: 10px;
   background-color: cadetblue;
   cursor: pointer;
